bloodc/src/parser/snapshots/bloodc__parser__tests__glob_import.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Glob {
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 8,
                            end: 11,
                            start_line: 1,
                            start_col: 9,
                        },
                    },
                ],
                span: Span {
                    start: 4,
                    end: 11,
                    start_line: 1,
                    start_col: 5,
                },
            },
            visibility: Private,
            span: Span {
                start: 0,
                end: 15,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 15,
        start_line: 1,
        start_col: 1,
    },
}
