bloodc/src/parser/snapshots/bloodc__parser__tests__hello_world.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: Some(
        ModuleDecl {
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 8,
                            end: 16,
                            start_line: 2,
                            start_col: 8,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 17,
                            end: 22,
                            start_line: 2,
                            start_col: 17,
                        },
                    },
                ],
                span: Span {
                    start: 8,
                    end: 22,
                    start_line: 2,
                    start_col: 8,
                },
            },
            span: Span {
                start: 1,
                end: 23,
                start_line: 2,
                start_col: 1,
            },
        },
    ),
    imports: [
        Simple {
            visibility: Private,
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 29,
                            end: 32,
                            start_line: 4,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 4,
                        },
                        span: Span {
                            start: 33,
                            end: 35,
                            start_line: 4,
                            start_col: 9,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 5,
                        },
                        span: Span {
                            start: 37,
                            end: 44,
                            start_line: 4,
                            start_col: 13,
                        },
                    },
                ],
                span: Span {
                    start: 29,
                    end: 44,
                    start_line: 4,
                    start_col: 5,
                },
            },
            alias: None,
            span: Span {
                start: 25,
                end: 45,
                start_line: 4,
                start_col: 1,
            },
        },
    ],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 6,
                    },
                    span: Span {
                        start: 50,
                        end: 54,
                        start_line: 6,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: Some(
                    EffectRow {
                        kind: Effects {
                            effects: [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 7,
                                                        },
                                                        span: Span {
                                                            start: 60,
                                                            end: 62,
                                                            start_line: 6,
                                                            start_col: 14,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 60,
                                                end: 62,
                                                start_line: 6,
                                                start_col: 14,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 60,
                                        end: 62,
                                        start_line: 6,
                                        start_col: 14,
                                    },
                                },
                            ],
                            rest: None,
                        },
                        span: Span {
                            start: 59,
                            end: 63,
                            start_line: 6,
                            start_col: 13,
                        },
                    },
                ),
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Call {
                                    callee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 70,
                                                                end: 77,
                                                                start_line: 7,
                                                                start_col: 5,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 70,
                                                    end: 77,
                                                    start_line: 7,
                                                    start_col: 5,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 70,
                                            end: 77,
                                            start_line: 7,
                                            start_col: 5,
                                        },
                                    },
                                    args: [
                                        CallArg {
                                            name: None,
                                            value: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: String(
                                                            "Hello, World!",
                                                        ),
                                                        span: Span {
                                                            start: 78,
                                                            end: 93,
                                                            start_line: 7,
                                                            start_col: 13,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 78,
                                                    end: 93,
                                                    start_line: 7,
                                                    start_col: 13,
                                                },
                                            },
                                            span: Span {
                                                start: 78,
                                                end: 93,
                                                start_line: 7,
                                                start_col: 13,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 70,
                                    end: 94,
                                    start_line: 7,
                                    start_col: 5,
                                },
                            },
                        ),
                        span: Span {
                            start: 64,
                            end: 96,
                            start_line: 6,
                            start_col: 18,
                        },
                    },
                ),
                span: Span {
                    start: 47,
                    end: 96,
                    start_line: 6,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 96,
        start_line: 2,
        start_col: 1,
    },
}
